--- a/debug.html
+++ b/debug.html
@@ -3,6 +3,66 @@
     <!-- <link rel="stylesheet" src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.min.css"> -->
   </head>
   <body>
+<style>
+      body{
+        background-color:#3b5998;
+        /*color:white;*/
+        font-size:16px;
+      }
+      p, a, button{
+        font-size:16px;
+      }
+      .container{
+        background-color:#e9ebee;
+        color:black;
+        padding:1rem;
+        display:none;
+      }
+      button{
+        background-color:#3b5998;
+        color:white;
+        font-weight:bold;
+        font-family:'Helvetica','Arial',sans-serif;
+        padding:1rem;
+      }
+      .reveal_on_login{
+        /*display:none;*/
+      }
+      .content_area{
+        padding:2rem;
+        margin:1rem;
+        background-color:white;
+        border-top:1px lightgray solid;
+        border-bottom:1px lightgray solid;
+      }
+      .pro_pic{
+        width:4rem;
+        height:auto;
+      }
+      .post_zone{
+        width:80%;
+        /*float:right;*/
+        display:inline-block;
+        vertical-align: top;
+      }
+      .new_post{
+        display:none;
+        background-color:white;
+        margin: 2rem;
+        padding: 2rem;
+        position: relative;
+      }
+      .new_post_zone{
+        padding-left:1rem;
+        position: absolute
+      }
+      .new_post_label{
+        display:none;
+      }
+    </style>
+
+
+
     <script   src="https://code.jquery.com/jquery-3.1.1.slim.min.js"   integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="   crossorigin="anonymous"></script>
     <!-- <script src="../js/vendor/foundation.min.js"></script> -->
     <script>
@@ -116,6 +176,36 @@
       }
     </script>
 
-    <button onclick="myFacebookLogin()">BUTTON</button>
+
+    <button class="login" onclick="myFacebookLogin()">Login with Facebook</button>
+    <div class="container">
+      <div class="reveal_on_login">
+        <button class="button generate_posts">Generate Post</button>
+        <div class="content_area">
+          <img class="pro_pic" src="" /> 
+          <p class="post_zone"></p>
+        </div>
+        <button class="post_it">Post to Facebook</button>
+      </div>
+    </div>
+
+    <h2 class="new_post_label" style="color:white;padding-left:0.5rem"> You just posted </h2>
+
+    <div class="new_post">
+      <img class="pro_pic"><p class="new_post_zone" style="vertical-align: top;display:inline-block;"></p>
+      <a style="color:blue;bottom:0.5rem;left:8rem;position:absolute">Like</a><a style="color:blue;bottom:0.5rem;left:12rem;position:absolute">Share</a>
+    </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-66264514-2', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
+
   </body>
 </html>
