--- a/debug.html
+++ b/debug.html
@@ -86,6 +86,18 @@
 
       function myFacebookLogin() {
         FB.login(function(){
+
+          /* get user picture */
+          FB.api(
+              "/me/picture",
+              function (response) {
+                if (response && !response.error) {
+                  pro_pic_address = response['data']['url'];
+                  $('.pro_pic').attr('src',pro_pic_address);
+                }
+              }
+          );
+
           FB.api(
             "me/posts?fields=message&limit=200",
             function (response) {
