--- a/index_backup.html
+++ b/index_backup.html
@@ -3,7 +3,7 @@
     <!-- <link rel="stylesheet" src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.min.css"> -->
   </head>
   <body>
-<style>
+    <style>
       body{
         background-color:#3b5998;
         /*color:white;*/
@@ -60,15 +60,13 @@
         display:none;
       }
     </style>
-
-
-
+    <link rel="stylesheet" src="../css/foundation.min.css">
     <script   src="https://code.jquery.com/jquery-3.1.1.slim.min.js"   integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="   crossorigin="anonymous"></script>
     <!-- <script src="../js/vendor/foundation.min.js"></script> -->
     <script>
       window.fbAsyncInit = function() {
         FB.init({
-          appId      : '575488932652946',
+          appId      : '1784286381853277',
           xfbml      : true,
           version    : 'v2.7'
         });
@@ -83,24 +81,33 @@
        fjs.parentNode.insertBefore(js, fjs);
      }(document, 'script', 'facebook-jssdk'));
 
+      // FB.ui(
+      //  {
+      //   method: 'share',
+      //   href: 'https://developers.facebook.com/docs/'
+      // }, function(response){});
+    </script>
 
-      function myFacebookLogin() {
-        FB.login(function(){
-
-          /* get user picture */
-          FB.api(
-              "/me/picture",
-              function (response) {
-                if (response && !response.error) {
-                  pro_pic_address = response['data']['url'];
-                  $('.pro_pic').attr('src',pro_pic_address);
-                }
-              }
-          );
-
-          FB.api(
-            "me/posts?fields=message&limit=200",
+    <script>
+    var api_response = {};
+    var pro_pic_address = '';
+    // Only works after `FB.init` is called
+    function myFacebookLogin() {
+      FB.login(function(){
+        /* get user picture */
+        FB.api(
+            "/me/picture",
             function (response) {
+              if (response && !response.error) {
+                pro_pic_address = response['data']['url'];
+                $('.pro_pic').attr('src',pro_pic_address);
+              }
+            }
+        );
+
+        FB.api(
+          "me/posts?fields=message&limit=200",
+          function (response) {
             if (response && !response.error) {
               // console.log(response);
               api_response = response['data'];
@@ -117,7 +124,7 @@
 
               
 
-            // console.log(titles);
+            console.log(titles);
 
             var terminals = {};
             var startwords = [];
@@ -154,9 +161,6 @@
                 // if (title.length < min_length) return make_title(min_length);
                 return title.join(' ');
             };
-
-
-            console.log(make_title(5));
             $('.container').show();
             $('.login').hide();
             $('.generate_posts').click(function(){
@@ -183,11 +187,12 @@
               // END MARKOV
             }
           }
-            );
-        },  {scope: 'user_posts,publish_actions'});
-      }
-    </script>
+        ); 
+      }, {scope: 'user_posts,publish_actions'});
 
+    };
+
+    </script>
 
     <button class="login" onclick="myFacebookLogin()">Login with Facebook</button>
     <div class="container">
@@ -207,17 +212,15 @@
       <img class="pro_pic"><p class="new_post_zone" style="vertical-align: top;display:inline-block;"></p>
       <a style="color:blue;bottom:0.5rem;left:8rem;position:absolute">Like</a><a style="color:blue;bottom:0.5rem;left:12rem;position:absolute">Share</a>
     </div>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-66264514-2', 'auto');
-      ga('send', 'pageview');
+    ga('create', 'UA-66264514-2', 'auto');
+    ga('send', 'pageview');
 
-    </script>
-
-
+  </script>
   </body>
 </html>
