--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
                 }
             }
 
-            var choice = function (a) {
+            function choice (a) {
                 var i = Math.floor(a.length * Math.random());
                 return a[i];
             };
 
-            var make_title = function (min_length) {
+            function make_title(min_length) {
                 // word = choice(startwords);
                 word = startwords[Math.floor(startwords.length * Math.random())];
                 var title = [word];
