--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 
 
   <!-- <script type="application/javascript" src="https://code.jquery.com/jquery-3.1.1.slim.min.js"   integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="   crossorigin="anonymous"></script> -->
-  <script type="application/javascript" src="http://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+
   <!-- <script src="../js/vendor/foundation.min.js"></script> -->
     <!-- <script>
       window.fbAsyncInit = function() {
