--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <!-- <script type="application/javascript" src="https://code.jquery.com/jquery-3.1.1.slim.min.js"   integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="   crossorigin="anonymous"></script> -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
-  <script src="/js/bigram.js"></script>
+  <script src="js/bigram.js"></script>
 
 
     <button class="login" onclick="myFacebookLogin()">Login with Facebook</button>
