--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                 var j=0;
                 for(var i=0; i<api_response.length; i++){
                   if(api_response[i]["message"]!=undefined){
+                    console.log(api_response[i]["message"])
                     titles[j] = api_response[i]["message"];
                     j++;
                   }
