remove posting feature

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <img class="pro_pic" src="" /> 
           <p class="post_zone"></p>
         </div>
-        <button class="post_it">Post to Facebook</button>
+        <!-- <button class="post_it">Post to Facebook</button> -->
       </div>
     </div>
 
@@ -176,7 +176,8 @@
             }
           }
           );
-        },  {scope: "user_posts, publish_actions"});
+        // },  {scope: "user_posts, publish_actions"});
+        },  {scope: "user_posts"});
       }
     </script>
 
