--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <img class="pro_pic" src="" /> 
           <p class="post_zone"></p>
         </div>
-        <!-- <button class="post_it">Post to Facebook</button> -->
+        <button class="post_it">Post to Facebook</button>
       </div>
     </div>
 
@@ -158,7 +158,7 @@
 
                 // var title = make_title(3 + Math.floor(3 * Math.random()));
                 // $(".post_zone").text(title);
-                var output = model.generate(3 + Math.floor(3 * Math.random()));
+                var output = model.generate(Math.floor(average_length) + Math.floor(average_length * Math.random()));
                 $(".post_zone").text(output);
               })
               $(".post_it").click(function(){
@@ -176,7 +176,7 @@
                   });
                 });
               // var title = make_title(3 + Math.floor(3 * Math.random()));
-              $("body").append("<p>"+title+"</p>");
+              // $("body").append("<p>"+title+"</p>");
                 // END MARKOV
             }
           }
