--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
                 // var title = make_title(3 + Math.floor(3 * Math.random()));
                 // $(".post_zone").text(title);
-                var output = model.generate(Math.floor(average_length) + Math.floor(average_length * Math.random()));
+                var output = model.generate(Math.floor(average_length) + Math.floor(average_length * Math.random()* 10));
                 $(".post_zone").text(output);
               })
               $(".post_it").click(function(){
